# periodic-function

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: install.yml  macos.yml  style.yml  ubuntu-20.04.yml  ubuntu.yml  windows.yml  我叫周訓毅
cmake/: CompilerWarnings.cmake  PeriodicFunctionDependencies.cmake  PeriodicFunctionOptions.cmake
include/periodic_function/: periodic_function.hpp
periodic_function/: CMakeLists.txt
periodic_function/include/periodic_function/: periodic_function.hpp
periodic_function/tests/: CMakeLists.txt
periodic_function/tests/src/: periodic_function_tests.cpp
tests/: CMakeLists.txt
tests/src/: periodic_function_tests.cpp
